# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\AuthController;
+use App\Http\Controllers\UserController;
 use Illuminate\Support\Facades\Route;
 
 Route::post('/auth/register', [AuthController::class, 'register'])->name('register');
@@ -13,6 +14,9 @@ Route::get('/email/verify/{id}/{hash}', [AuthController::class, 'verifyEmail'])
 Route::middleware('auth:sanctum')->group(function () {
     Route::get('/email/verification-notification', [AuthController::class, 'resendVerificationEmail'])
         ->middleware(['throttle:6,1'])->name('verification.send');
+
+    Route::get('/user', [UserController::class, 'me']);
+    Route::post('/user/profile-image', [UserController::class, 'uploadProfileImage']);
 
     Route::post('/auth/logout', [AuthController::class, 'logout']);
 });
